<resources>
    <string name="app_name">AliShop</string>
    <string name="TitleSplash">فروشگاه علی</string>
    <string name="UserName">نام کاربری</string>
    <string name="Password">رمز عبور</string>
    <string name="Login">ورود</string>
    <string name="Search">جستجو</string>
    <string name="Products">محصولات</string>
    <string name="Sell">فروش</string>
    <string name="Add">افزودن</string>
    <string name="Edit">ویرایش</string>
    <string name="Send">انتقال</string>
    <string name="Open">باز</string>
    <string name="Close">بستن</string>
    <string name="Total">موجودی:</string>
    <string name="Loading">در حال بارگذاری</string>
    <string name="Reload">بارگزاری مجدد</string>
    <string name="ProductName">نام محصول</string>
    <string name="Count">تعداد</string>
    <string name="Count2">تعداد: </string>
    <string name="Fee">قیمت</string>
    <string name="FeeSell">قیمت فروش</string>
    <string name="Date">تاریخ</string>
    <string name="Date2">تاریخ:</string>
    <string name="Sum">مجموع</string>
    <string name="Sum2">مجموع:</string>
    <string name="Fee2">قیمت: </string>
    <string name="Camera">دوربین</string>
    <string name="Gallery">گالری</string>
    <string name="Cancel">انصراف</string>
    <string name="ReciveAccept">تایید دریافت</string>
    <string name="Comback">برگشت</string>
    <string name="YourPicture">عکس مورد نظر</string>
    <string name="EditProduct">ویرایش محصول</string>
    <string name="DetailProduct">جزئیات محصول</string>
    <string name="Store1">انبار1</string>
    <string name="Store2">انبار2</string>
    <string name="Description">توضیحات</string>
    <string name="Report">گزارشگیری</string>
    <string name="CostAndBenefit">سود و زیان</string>
    <string name="CostAndBenefit2">سود و زیان:</string>
    <string name="WayProduct">محصولات در حال انتقال</string>
    <string name="SearchByName">جستجو براساس نام</string>
    <string name="FromDate">از تاریخ</string>
    <string name="ToDate">تا تاریخ</string>

    <string name="Input_Your_Password">رمز عبور خود را وارد نمایید</string>
    <string name="Input_Your_UserName">نام کاربری خود را وارد نمایید</string>
    <string name="Please_be_Careful_in_Entering_Information">لطفا در وارد کردن اطلاعات دقت کنید</string>
    <string name="please_Checked_Your_Internet_Connection">لطفا اتصال اینترنت خود را چک نمایید</string>
    <string name="Operation_error_occurred">خطای در عملیات رخ داده است</string>
    <string name="NoSuchUserFound">کاربری یافت نشد</string>
    <string name="YourInternetIsVerySlow">اینترنت شما بسیار کند است</string>
    <string name="ThisEditTextIsRequired">این مقدار باید پر شود</string>
    <string name="CountAllProductsInStore1">تعداد کل محصولات وارده به انبار 1:</string>
    <string name="CountAllProductsInStore2">تعداد کل محصولات وارده به انبار 2:</string>
    <string name="CountAllProductsSoldToStore2">تعداد کل محصولات ارسالی به انبار 2:</string>
    <string name="AllProductBack">تعداد کل محصولات برگشتی:</string>
    <string name="ProductSoldCount">تعداد کل محصولات فروش رفته:</string>
    <string name="ProductSoldPrice">مبلغ کل محصولات فروش رفته:</string>
    <string name="ProductBoughtCount">مجموع تعداد کل خرید ها- انبار یک:</string>
    <string name="ProductBoughtPrice">مجموع قیمت کل خرید ها- انبار یک:</string>
    <string name="YourAccountIsDisable">حساب کاربری شما غیرفعال است</string>

</resources>
