<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:textDirection="rtl"
    android:layoutDirection="rtl">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/colorWhiteDark"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/txt_ProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ProductName"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/txt_Count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="2dp"
                        android:hint="@string/Count"
                        android:inputType="number"/>

                    <EditText
                        android:id="@+id/txt_Fee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="2dp"
                        android:hint="@string/Fee"
                        android:inputType="number"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/txt_Date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/vazir"
                        android:textSize="16dp"
                        android:hint="@string/Date"/>

                    <EditText
                        android:id="@+id/txt_Sum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/vazir"
                        android:textSize="16dp"
                        android:hint="@string/Sum"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/txt_Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vazir"
                    android:textSize="16dp"
                    android:lines="2"
                    android:hint="@string/Description"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/rdo_Store1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Store1"
                        android:paddingRight="5dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/vazir"/>

                    <RadioButton
                        android:id="@+id/rdo_Store2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Store2"
                        android:paddingRight="5dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/vazir"
                        android:layout_marginRight="15dp"/>

                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_image"/>

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="20dp"
                    android:theme="@style/AppTheme.MyRipple"
                    android:clickable="true"
                    android:padding="0dp"
                    app:cardUseCompatPadding="false"
                    android:clipToPadding="false">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Edit"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="12dp"
                        android:fontFamily="@font/vazir"
                        android:textStyle="bold"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:theme="@style/ProgressBarTheme"/>

</RelativeLayout>