<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolBar">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/Loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="false"
                    android:clipToPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                            android:id="@+id/spinner_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textDirection="rtl"
                            android:layoutDirection="rtl"
                            android:spinnerMode="dialog"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            android:paddingRight="5dp"
                            android:paddingLeft="5dp"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/txt_FromDate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/FromDate"/>

                            <EditText
                                android:id="@+id/txt_ToDate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/ToDate"/>

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/btn_Search"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="10dp"
                            app:cardBackgroundColor="@color/colorAccent"
                            app:cardCornerRadius="20dp"
                            android:theme="@style/AppTheme.MyRipple"
                            android:clickable="true">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Search"
                                android:gravity="center"
                                android:textColor="@color/colorWhite"
                                android:textSize="14dp"
                                android:fontFamily="@font/vazir"
                                android:textStyle="bold"/>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorWhiteDark"
                app:cardCornerRadius="10dp"
                android:clipToPadding="false"
                app:cardUseCompatPadding="false"
                android:layout_below="@id/Loading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/CountAllProductsInStore1"/>

                        <TextView
                            android:id="@+id/lbl_AllProductIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/CountAllProductsInStore2"/>

                        <TextView
                            android:id="@+id/lbl_AllProductTransportIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/CountAllProductsSoldToStore2"/>

                        <TextView
                            android:id="@+id/lbl_AllProductOut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/AllProductBack"/>

                        <TextView
                            android:id="@+id/lbl_AllProductBack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/ProductSoldCount"/>

                        <TextView
                            android:id="@+id/lbl_ProductSoldCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/ProductSoldPrice"/>

                        <TextView
                            android:id="@+id/lbl_ProductSoldPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/ProductBoughtCount"/>

                        <TextView
                            android:id="@+id/lbl_ProductBoughtCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/ProductBoughtPrice"/>

                        <TextView
                            android:id="@+id/lbl_ProductBoughtPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorBlack"
                            android:textSize="14dp"
                            android:text="@string/CostAndBenefit2"/>

                        <TextView
                            android:id="@+id/lbl_Profit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazir"
                            android:textColor="@color/colorSubTitle"
                            android:textSize="14dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left"
                            android:textDirection="ltr"
                            android:layoutDirection="ltr"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



</RelativeLayout>